--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <title>vps.geekrabbit.top</title> 
 </head> 
 <frameset framespacing="0" border="0" rows="0" frameborder="0"> 
-<frame name="main" src="https://baidu.com" scrolling="auto" noresize> 
+<frame name="main" src="https://server.geekrabbit.top:3380/#v1:0:18:4:::::::" scrolling="auto" noresize> 
 </frameset> 
 </html>
